--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = txt-ui
-version = 0.0.1
+version = 0.0.2
 description = A Django app to create, upload, update, delete and download txt documents
 long_description = file: README.md
 author = Immanuel Njuguna
@@ -30,6 +30,7 @@ install_requires =
     Django >= 4.2.1
     django-bootstrap5 >= 23.1
     django-ckeditor >= 6.5.1
+    django-cleanup >= 7.0.0
     django-js-asset >= 2.0.0
     sqlparse >= 0.4.4
     tzdata >= 2023.3
